Added files for FormTable Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 6/FormPage.html
+++ b/Hmwrk/Assignment 6/FormPage.html
@@ -26,11 +26,11 @@
     <form action="TablePage.html" method="get">
     	<input name="Hours" type="text" value=""></input>
         <label>Hours Worked (Number Only)</label><br>
-        <input name="Double Time Start" type="text" value=""></input>
+        <input name="doubleTimeStart" type="text" value=""></input>
         <label>Hours that Double Time Starts </label><br>
-		<input name="Triple Time Start" type="text" value=""></input>
+		<input name="tripleTimeStart" type="text" value=""></input>
         <label>Hours that Triple Time Starts</label><br>
-        <input name="Taxes%" type="text" value=""></input>
+        <input name="Taxes" type="text" value=""></input>
         <label>% Tax</label><br>
         <input name="Submit" type="submit" value="Submit Information"></input>
         </form>
