--- a/Projects/Connect 4/connect4.html
+++ b/Projects/Connect 4/connect4.html
@@ -13,7 +13,21 @@
 </head>
 
 <body>
-
+<!--HEADER-->
+<div id="header">
+	<div id="navbar">
+    	<ul>
+        	<li><a href="index.html">Home</a>
+            	<ul>
+                	<li><a href="index.html">Home</a></li>
+                </ul>
+            </li>
+            <li><a href="connect4.html">Connect 4 Game</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="other.html">Other Works</a></li>
+        </ul>
+	</div>
+</div>
 
 </body>
 </html>
