--- a/Projects/Connect 4/connect4.html
+++ b/Projects/Connect 4/connect4.html
@@ -19,7 +19,7 @@
     	<ul>
         	<li><a href="index.html">Home</a>
             	<ul>
-                	<li><a href="index.html">Home</a></li>
+                	<li><a href="index.html">Submenu</a></li>
                 </ul>
             </li>
             <li><a href="connect4.html">Connect 4 Game</a></li>
@@ -28,6 +28,10 @@
         </ul>
 	</div>
 </div>
+
+<script>
+
+</script>
 
 </body>
 </html>
