Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Connect 4/connect4.html
+++ b/Projects/Connect 4/connect4.html
@@ -8,27 +8,34 @@
 <head>
 <meta charset="utf-8">
 <title>Connect 4</title>
-<link type="text/css" rel="stylesheet" href="c4stylesheet.css">
-<link type="text/javascript" href="library.js">
+<link type="text/css" rel="stylesheet" href="c4stylesheet.css"/>
+<link type="text/javascript" href="library.js"/>
 </head>
 
 <body>
 <!--HEADER-->
-<div id="header">
-	<div id="navbar">
+<div class="header">
+	<div class="navbar">
     	<ul>
-        	<li><a href="index.html">Home</a>
-            	<ul>
-                	<li><a href="index.html">Submenu</a></li>
-                </ul>
-            </li>
+        	<li><a href="index.html">Home</a></li>
             <li><a href="connect4.html">Connect 4 Game</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="other.html">Other Works</a></li>
         </ul>
 	</div>
 </div>
-
+<!-- CONNECT 4 GAME AREA-->
+<div class="play-area">
+	<p>
+		<img></img>
+    	<img></img>
+    	<img></img>
+    	<img></img>
+    	<img></img>
+    	<img></img>
+    	<img></img>
+	</p>	
+</div>
 <script>
 
 </script>
