Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack/blackjack.html
+++ b/Projects/Blackjack/blackjack.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Blackjack Trial</title>
 <link type="text/javascript" href="blackjack.js">
+<link type="text/javascript" href="loginscript.js">
 </head>
 
 <body>
@@ -16,8 +17,8 @@
         </ul>
     </header>
     
-   <div>
-   
+   <div class="gameArea">
+   	
    </div>
 </body>
 </html>
