--- a/Projects/Blackjack-Business Websites/index.html
+++ b/Projects/Blackjack-Business Websites/index.html
@@ -10,25 +10,28 @@
 <body>
 
 <header>
-    	<ul>
-        	<li></li>
-            <li></li>
-            <li></li>
+    	<ul class="nav">
+        	<li><a href=""</a>Home</li>
+            <li><a href=""></a>Products</li>
+            <li><a href=""></a>About</li>
+            <input name="username" type="text" />Login
+            <input name="password" type="text" />Password
         </ul>
 </header>
 
 <aside>
     	<div>
-        	
+        	About Us:
+            	Reevo Games Inc. is a website dedicated to supplying you with the highest quality Digital Games that run smooth on almost any computer build! 
         </div>
 </aside>
 
 <div id="indexmain">
     <div id="games">
-    	Buy Computer Here!
+    	Buy Computer Games Here!
     </div>
     <div id="aboutdiv">
-    	About us:
+    	Updates!
         
     </div>
 </div>
