--- a/Projects/Blackjack-Business Websites/index.html
+++ b/Projects/Blackjack-Business Websites/index.html
@@ -11,9 +11,9 @@
 
 <header>
     	<ul class="nav">
-        	<li><a href=""</a>Home</li>
-            <li><a href=""></a>Products</li>
-            <li><a href=""></a>About</li>
+        	<li><a href="index.html"</a>Home</li>
+            <li><a href="games.html"></a>Products</li>
+            <li><a href="about.html"></a>About</li>
             <input name="username" type="text" />Login
             <input name="password" type="text" />Password
         </ul>
