Signed-off-by: reevo17 <runt17@gmail.com>

--- a/SI/Cookies! 10-22-14/newpage.html
+++ b/SI/Cookies! 10-22-14/newpage.html
@@ -16,8 +16,9 @@
 				document.write(property + "=" + $_GET[property] +"<br>");
 			}
 		
-		var val = user;
+		var val = $_GET.user;
 		document.write(val);
+		
 	</script>
 </body>
 </html>
