Added content to index and added a lot to Stylesheet, preview breaks in Google Chrome Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites/register.html
+++ b/Projects/Blackjack-Business Websites/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reevo Inc Games</title>
+<title>Untitled Document</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 </head>
@@ -13,15 +13,9 @@
         	<li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-			<form name="loginform" action="login.html" method="get" id="loginform">
-				<input name="username" type="text" /><div id="headerlogin">Login</div>
-				<input name="password" type="password" /><div id="headerlogin">Password</div>
-				<input type="submit" text="Submit" value="Submit"/>
-			</form>
-            <button type="button" onClick="register.html">Register</button>
+
             
   </ul>
 </header>
-	
 </body>
 </html>
