--- a/SI/Cookies! 10-22-14/Website Practise Login.html
+++ b/SI/Cookies! 10-22-14/Website Practise Login.html
@@ -12,9 +12,9 @@
 
 <header>
     	<ul class="nav">
-        	<li><a href="index.html"</a>Home</li>
-            <li><a href="games.html"></a>Products</li>
-            <li><a href="about.html"></a>About</li>
+        	<li><a href="index.html">Home</a></li>
+            <li><a href="games.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
 			<form>
             <input name="username" type="text" />Login
             <input name="password" type="password" />Password
