Added more files for website, added background(gradient) Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites/games.html
+++ b/Projects/Blackjack-Business Websites/games.html
@@ -9,19 +9,23 @@
 
 <body>
 <header>
+		<img src="logo.png"/>
     	<ul class="nav">
         	<li><a href="index.html">Home</a></li>
-            <li><a href="games.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-			<form name="loginform" action="login.html" method="get" id="loginform">
-				<input name="username" type="text" /><div id="headerlogin">Login</div>
-				<input name="password" type="password" /><div id="headerlogin">Password</div>
-				<input type="submit" text="Submit" value="Submit"/>
-			</form>
-            <button type="button" onClick="register.html">Register</button>
             
-  </ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
+		</ul>
 </header>
+
+<aside>
+
+  <div>
+        	About Us:<br>
+            	Reevo Games Inc. is a website dedicated to supplying you with the highest quality Digital Games that run smooth on almost any computer build! <br><br> Our team of special programmers are trained with the highest level programming degrees in the highest level languages available for computers in this day and age! <br><br> Reevo Inc was started by our glorious leader and savior Aaron Salcido, whom will one day rise to power and conquor Tamriel.
+   </div>
+</aside>
 	
 </body>
 </html>
