--- a/Projects/Blackjack-Business Websites/login.html
+++ b/Projects/Blackjack-Business Websites/login.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reevo Game Store Home</title>
+<title>Untitled Document</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="login.js">
 </head>
 
 <body>
 
-<header>
+<div>
+	<header>
 		<img src="logo.png"/>
     	<ul class="nav">
         	<li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
 		</ul>
 </header>
@@ -27,22 +26,11 @@
             	Reevo Games Inc. is a website dedicated to supplying you with the highest quality Digital Games that run smooth on almost any computer build! <br><br> Our team of special programmers are trained with the highest level programming degrees in the highest level languages available for computers in this day and age! <br><br> Reevo Inc was started by our glorious leader and savior Aaron Salcido, whom will one day rise to power and conquor Tamriel.
    </div>
 </aside>
-
-<div id="indexmain">
-	<a href="games.html">
-		<div style="font-size:35px" id="games">
-			Buy Computer Games Here!
-		</div>
-	</a>
-    <br><br>
-    <div style="font-family:Arial, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif; text-align:center; height:100px;"> [YOUR AD HERE]<br>Contact admin emails: <ul><li>email@email.com</li></div>
-    <br>
-
-    <div id="aboutdiv">
-	<p>
-    	Updates!
-    </p>
+	<form name="loginform" action="login.html" method="get" id="loginform">
+				<input name="username" type="text" /><div id="headerlogin">Username</div>
+				<input name="password" type="password" /><div id="headerlogin">Password</div>
+				<input type="submit" text="Submit" value="Submit"/>
+			</form>
 </div>
-
 </body>
 </html>
