--- a/Projects/Blackjack-Business Websites/index.html
+++ b/Projects/Blackjack-Business Websites/index.html
@@ -5,7 +5,7 @@
 <title>Reevo Game Store Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
-</head>
+</head>s
 
 <body>
 
