--- a/Projects/Blackjack-Business Websites/index.html
+++ b/Projects/Blackjack-Business Websites/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reevo Game Store Home</title>
+<title>Reevo Inc Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
-</head>s
+</head>
 
 <body>
 
 <header>
-		<img src="logo.png"/>
+		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
-        	<li><a href="index.html">Home</a></li>
+       	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="login.html">Login</a></li>
@@ -35,12 +35,14 @@
 		</div>
 	</a>
     <br><br>
-    <div style="font-family:Arial, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif; text-align:center; height:100px;"> [YOUR AD HERE]<br>Contact admin emails: <ul><li>email@email.com</li></div>
+    <div style="font-family:Arial, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif; text-align:center; height:100px;"> [YOUR AD HERE]<br>Contact admin emails: 
+    <br>email@email.com</div>
     <br>
 
     <div id="aboutdiv">
 	<p>
-    	Updates!
+    	Updates!<br>
+        
     </p>
 </div>
 
