--- a/Projects/Blackjack-Business Websites/login.html
+++ b/Projects/Blackjack-Business Websites/login.html
@@ -2,35 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Reevo Inc. Login</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
 
-<div>
-	<header>
-		<img src="logo.png"/>
+<header>
+		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
-        	<li><a href="index.html">Home</a></li>
+       	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
 		</ul>
 </header>
 
 <aside>
 
-  <div>
-        	About Us:<br>
-            	Reevo Games Inc. is a website dedicated to supplying you with the highest quality Digital Games that run smooth on almost any computer build! <br><br> Our team of special programmers are trained with the highest level programming degrees in the highest level languages available for computers in this day and age! <br><br> Reevo Inc was started by our glorious leader and savior Aaron Salcido, whom will one day rise to power and conquor Tamriel.
+  <div style="margin-top:30px; font-size:15px">
+        	All of your log-in information is safefly secured in your local storage, easily accessable by hackers, but who cares about that anyways right?
    </div>
 </aside>
+
+
+<div class="formdiv">
 	<form name="loginform" action="login.html" method="get" id="loginform">
 				<input name="username" type="text" /><div id="headerlogin">Username</div>
 				<input name="password" type="password" /><div id="headerlogin">Password</div>
 				<input type="submit" text="Submit" value="Submit"/>
 			</form>
+</div>
+
+<div style="padding:20px;font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; text-align:center;">
+Enter your log in information above.<br>
+Logging in/Creating an Account gives you access to features such as The Shopping Cart and Game Trials!
 </div>
 </body>
 </html>
