Set all webpages to look the same, made the Register and Login pages working Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites/login.html
+++ b/Projects/Blackjack-Business Websites/login.html
@@ -14,7 +14,7 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
+           
             <li><a href="register.html">Register</a></li>
 		</ul>
 </header>
@@ -29,7 +29,7 @@
 
 <div class="formdiv">
 	<form name="loginform" action="login.html" method="get" id="loginform">
-				<input name="username" type="text" /><div id="headerlogin">Username</div>
+				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
 				<input name="password" type="password" /><div id="headerlogin">Password</div>
 				<input type="submit" text="Submit" value="Submit"/>
 			</form>
