Added login.js and an if statement that edits visability of login buttons Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V1/index.html
+++ b/Projects/Blackjack-Business Websites V1/index.html
@@ -17,6 +17,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
+            <li id="loggedin"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="loggedin"><a href="logout.html">Log Out</a></li>
+            
 		</ul>
 </header>
 
