--- a/Projects/Blackjack-Business Websites V1/games.html
+++ b/Projects/Blackjack-Business Websites V1/games.html
@@ -9,16 +9,18 @@
 
 <body>
 <header>
-		<img src="logo.png"/>
+		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
-        	<li><a href="index.html">Home</a></li>
-            
+       	  <li><a href="index.html">Home</a></li>
+            <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li id="loggedin1"><a href="login.html">Login</a></li>
+            <li id="loggedin1"><a href="register.html">Register</a></li>
+            <li id="loggedin"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="loggedin"><a href="logout.html">Log Out</a></li>
+            
 		</ul>
 </header>
-
 <aside>
 
   <div>
