Added to V2 folder, added Link to register/shoppingcart script Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/index.html
+++ b/Projects/Blackjack-Business Websites V2/index.html
@@ -5,6 +5,7 @@
 <title>Reevo Inc Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
+
 </head>
 
 <body>
@@ -15,8 +16,11 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li id="ln1" style="display:inline"><a href="login.html">Login</a></li>
+            <li id="ln1" style="display:inline"><a href="register.html">Register</a></li>
+            <li id="ln" style="display:none"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="ln" style="display:none"><a href="logout.html">Log Out</a></li>
+            
 		</ul>
 </header>
 
