--- a/Projects/Blackjack-Business Websites V2/about.html
+++ b/Projects/Blackjack-Business Websites V2/about.html
@@ -15,10 +15,17 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li id="loggedin1"><a href="login.html">Login</a></li>
+            <li id="loggedin1"><a href="register.html">Register</a></li>
+            <li id="loggedin"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="loggedin"><a href="logout.html">Log Out</a></li>
+            
 		</ul>
 </header>
+
+<div>
+
+</div>
 
 </body>
 </html>
