--- a/Projects/Blackjack-Business Websites V2/register.html
+++ b/Projects/Blackjack-Business Websites V2/register.html
@@ -29,9 +29,10 @@
 </div>
 
 <div class="regesterdiv">
-	<form name="loginform" action="login.html" method="get" id="loginform">
-				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
-				<input name="password" type="password" /><div id="headerlogin">Password</div><br>
+	<form name="registerform" onsubmit="return validate_Form()" action="register.html" method="get" id="loginform">
+				<input name="username" type="text" /><div>Enter a Username</div><br>
+				<input name="password" type="password" /><div>Type Your Password</div><br>
+                <input name="password2" type="password" /><div>(Retype)Password</div><br>
 				<input type="submit" formaction="submit" formmethod="POST" title="Submit" value="Submit" text="Submit"/>
 			</form>
             
