Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/register.html
+++ b/Projects/Blackjack-Business Websites V2/register.html
@@ -32,7 +32,7 @@
 	<form name="registerform" onsubmit="return validate_Form()" action="register.html" method="get" id="loginform">
 				<input name="username" type="text" /><div class="regesterdiv">Enter a Username</div><br>
                 <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br></div>
-				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br></div><br>
+				<input name<li></li>="password" type="password" /><div class="regesterdiv">Type Your Password<br></div><br>
                 <input name="password2" type="password" /><div class="regesterdiv">(Retype)Password</div><br>
 				<input type="submit" formaction="submit" formmethod="POST" title="Submit" value="Submit" text="Submit"/>
 			</form>
