--- a/Projects/Blackjack-Business Websites V2/register.html
+++ b/Projects/Blackjack-Business Websites V2/register.html
@@ -29,12 +29,12 @@
 </div>
 
 <div class="regesterdiv">
-	<form name="registerform" onsubmit="return validate_Form()" action="register.html" method="get" id="loginform">
+	<form name="input" action="register.html" onsubmit="return validate_Form()" method="get" id="loginform">
 				<input name="username" type="text" /><div class="regesterdiv">Enter a Username</div><br>
                 <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br></div>
-				<input name<li></li>="password" type="password" /><div class="regesterdiv">Type Your Password<br></div><br>
-                <input name="password2" type="password" /><div class="regesterdiv">(Retype)Password</div><br>
-				<input type="submit" formaction="submit" formmethod="POST" title="Submit" value="Submit" text="Submit"/>
+				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br></div><br>
+                <input name="password2" type="password2" /><div class="regesterdiv">(Retype)Password</div><br>
+				<input type="submit" value="submit"/><br>
 			</form>
             
 	            
