--- a/Projects/Blackjack-Business Websites V2/index.html
+++ b/Projects/Blackjack-Business Websites V2/index.html
@@ -16,10 +16,10 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln1" style="display:inline"><a href="login.html">Login</a></li>
-            <li id="ln1" style="display:inline"><a href="register.html">Register</a></li>
-            <li id="ln" style="display:none"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln" style="display:none"><a href="logout.html">Log Out</a></li>
+            <li id="ln1" style=""><a href="login.html">Login</a></li>
+            <li id="ln1" style=""><a href="register.html">Register</a></li>
+            <li id="ln" style=""><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="ln" style=""><a href="logout.html">Log Out</a></li>
             
 		</ul>
 </header>
