Editted Headers, removed Style hardcoded Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/games.html
+++ b/Projects/Blackjack-Business Websites V2/games.html
@@ -14,13 +14,14 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="loggedin1"><a href="login.html">Login</a></li>
-            <li id="loggedin1"><a href="register.html">Register</a></li>
-            <li id="loggedin"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="loggedin"><a href="logout.html">Log Out</a></li>
+            <li id="ln1"><a href="login.html">Login</a></li>
+            <li id="ln1"><a href="register.html">Register</a></li>
+            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="ln"><a href="logout.html">Log Out</a></li>
             
 		</ul>
 </header>
+
 <aside>
 
   <div>
