--- a/Projects/Blackjack-Business Websites V2/login.html
+++ b/Projects/Blackjack-Business Websites V2/login.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Reevo Inc. Login</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
+<link type="text/javascript" href="loginscript.js">
 </head>
 
 <body>
@@ -14,10 +15,14 @@
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-           
-            <li><a href="register.html">Register</a></li>
+            <li id="ln1"><a href="login.html">Login</a></li>
+            <li id="ln1"><a href="register.html">Register</a></li>
+            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="ln"><a href="logout.html">Log Out</a></li>
+            
 		</ul>
 </header>
+
 
 <aside>
 
