--- a/Projects/Blackjack-Business Websites V2/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V2/registercomplete.html
@@ -6,5 +6,19 @@
 </head>
 
 <body>
+<header>
+		<img src="logo.png" width="134" height="54"/>
+    	<ul class="nav">
+       	  <li><a href="index.html">Home</a></li>
+            <li><a href="games.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li id="ln1"><a href="login.html">Login</a></li>
+            <li id="ln1"><a href="register.html">Register</a></li>
+            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li id="ln"><a href="logout.html">Log Out</a></li>
+            
+		</ul>
+</header>
+
 </body>
 </html>
