Fixed headers on all pages, removed loginscript.js and is being replaced by login.js Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/login.html
+++ b/Projects/Blackjack-Business Websites V2/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Reevo Inc. Login</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
-<link type="text/javascript" href="loginscript.js">
+<link type="text/javascript" href="login.js">
 </head>
 
 <body>
