Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/login.html
+++ b/Projects/Blackjack-Business Websites V2/login.html
@@ -44,5 +44,8 @@
 Enter your log in information above.<br>
 Logging in/Creating an Account gives you access to features such as The Shopping Cart and Game Trials!
 </div>
+<div>
+	<img src="http://i.imgur.com/XRzaECO.jpg" class="loginImg"/>
+</div>
 </body>
 </html>
