--- a/Projects/Blackjack-Business Websites V2/register.html
+++ b/Projects/Blackjack-Business Websites V2/register.html
@@ -32,8 +32,8 @@
 		}
 //VALIDATE PASSWORD
 		function validate_Password(){
-			var Arr=document.forms["input"]["password"].value.match(/^[A-Za-z0-9]{5,15}$/g);
-			if(Arr1 != null){
+			var Arr=document.forms["input"]["password"].value.match(/((?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!$%^&+@#$%]).{4,15})/);
+			if(Arr != null){
 				return true;
 			}else{
 				alert("Invalid Password Field");
@@ -44,8 +44,7 @@
 		function validate_Password2(){
 			var pass1=document.forms["input"]["password"].value;
 			var pass2=document.forms["input"]["password2"].value;
-	if(pass1 == pass2){
-				
+			if(pass1 == pass2){
 				return true;
 			}else{
 				alert("Passwords do not match");
@@ -59,8 +58,9 @@
 	function validate_Form(){
 		if(!validate_Username())return false;
 		if(!validate_Email())return false;
-		if(!validate_Password()) return false;
+		if(!validate_Password())return false;
 		if(!validate_Password2())return false;
+		return true;
 	}	
 </script>
 </head>
@@ -82,16 +82,16 @@
 
 <div>
 	<p style="font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size:24px; text-align:center;">
-    	Enter information to create an acount with Reevo Inc! All of your information is <br>
+    	Enter information to create an account with Reevo Inc! All of your information is <br>
         secure and we will TOTALLY not send it to anyone...or sell it...maybe...
     </p>
 </div>
 
 <div class="regesterdiv">
-	<form name="input" action="register.html" onsubmit="return validate_Form()" method="get" id="loginform">
+	<form name="input" action="registercomplete.html" onsubmit="return validate_Form()" method="get" id="loginform">
 				<input name="username" type="text" /><div class="regesterdiv">Enter a Username</div><br>
                 <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br></div>
-				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br></div><br>
+				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br>Requires at least one number, One lower case, One Uppercase, And one special Character(!@#$%^&*+) <br> Between 4-15 Characters Long<br></div><br>
                 <input name="password2" type="password" /><div class="regesterdiv">(Retype)Password</div><br>
 				<input id="registerSubmit" type="submit" value="submit"/><br>
 			</form>
