Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -4,6 +4,38 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 <link type="text/javascript" href="login.js">
+<script>
+	function getForm(url){
+		var info=url.split("?");
+		var nameValuePairs=info[1].split("&");
+		var $_GET = new Object;
+		for(var i=0;i<nameValuePairs.length;i++){
+			var map=nameValuePairs[i].split("=");
+			var name=map[0];
+			var value=map[1];
+			$_GET[name]=value;
+		}
+		return $_GET;
+	}
+function setCookie(cname, cvalue, exdays){
+	var d = new Date();
+    d.setTime(d.getTime() + (1*24*60*60*1000));
+    var expires = "expires="+d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires;
+}
+function getCookie(){
+	var name = cname;
+	var ca = document.cookie.split(;);
+	for(var i=0; i<ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1);
+        if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
+    }
+     return "";
+}
+
+}
+</script>
 </head>
 
 <body>
@@ -24,6 +56,21 @@
 <script>
 //DISPLAY LOG IN INFORMATION TO USER
 document.write();
+//	create variable to hold url object ($_GET)
+var url = document.location.href;
+var $_GET = getForm(url);
+// strigify object into string
+var str = JSON.stringify($_GET);
+//create a cookiename variable
+var email = $_GET.email.value;
+loginCookie.split("@")
+//create ttl variable
+//pass string and other two variables into setcookie function
+//getcookie
+//JSON.parse
+//using a for/in loop, display cookie contents
+
+//call get cookie function
 </script>
 </div>
 </body>
