Added cards and table to hold cards Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/blackjack.html
+++ b/Projects/Blackjack-Business Websites V3/blackjack.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-	<img src="logo.png" width="134" height="54"/>
+		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
@@ -24,11 +24,32 @@
 </header>
 
     
-   <div class="gameArea">
-   		<button>
-		<button>
-		<button>
-		<button>
+   <div class="messageArea">
+   		
    </div>
+   <table>
+		<!--DEALER AREA-->
+		<tr>
+			<td id="DealerCard1"></td>
+			<td id="DealerCard2"></td>
+			<td id="DealerCard3"></td>
+			<td id="DealerCard4"></td>
+			<td id="DealerCard5"></td>
+		</tr>
+		
+		<!--PLAYER AREA-->
+		<tr>
+			<td id="PlayerCard1"></td>
+			<td id="PlayerCard2"></td>
+			<td id="PlayerCard3"></td>
+			<td id="PlayerCard4"></td>
+			<td id="PlayerCard4"></td>
+		</tr>
+		<tr>
+			<td id="messageArea">
+			
+			</td>
+		</tr>
+   <table>
 </body>
 </html>
