--- a/Projects/Blackjack-Business Websites V2/blackjack.html
+++ b/Projects/Blackjack-Business Websites V2/blackjack.html
@@ -24,8 +24,32 @@
 </header>
 
     
-   <div class="gameArea">
+   <div class="messageArea">
    		
    </div>
+   <table>
+		<!--DEALER AREA-->
+		<tr>
+			<td id="DealerCard1"></td>
+			<td id="DealerCard2"></td>
+			<td id="DealerCard3"></td>
+			<td id="DealerCard4"></td>
+			<td id="DealerCard5"></td>
+		</tr>
+		
+		<!--PLAYER AREA-->
+		<tr>
+			<td id="PlayerCard1"></td>
+			<td id="PlayerCard2"></td>
+			<td id="PlayerCard3"></td>
+			<td id="PlayerCard4"></td>
+			<td id="PlayerCard4"></td>
+		</tr>
+		<tr>
+			<td id="messageArea">
+			
+			</td>
+		</tr>
+   <table>
 </body>
 </html>
