Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/blackjack.html
+++ b/Projects/Blackjack-Business Websites V3/blackjack.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Blackjack Trial</title>
-<link type="text/css" rel="stylesheet" href="stylesheet.css">
+<link type="text/css" rel="stylesheet" href="blackjackstylesheet.css">
 <link type="text/javascript" href="blackjack.js">
 <link type="text/javascript" href="login.js">
 </head>
 
-<body>
+<body id="BlackJackBody">
+
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -19,7 +20,6 @@
             <li id="ln1"><a href="register.html">Register</a></li>
             <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
             <li id="ln"><a href="logout.html">Log Out</a></li>
-            
 		</ul>
 </header>
 
@@ -30,7 +30,7 @@
    <table>
 		<!--DEALER AREA-->
 		<tr>
-			<td id="DealerCard1"></td>
+			<td id="DealerCard1">f</td>
 			<td id="DealerCard2"></td>
 			<td id="DealerCard3"></td>
 			<td id="DealerCard4"></td>
@@ -39,7 +39,7 @@
 		
 		<!--PLAYER AREA-->
 		<tr>
-			<td id="PlayerCard1"></td>
+			<td id="PlayerCard1">f</td>
 			<td id="PlayerCard2"></td>
 			<td id="PlayerCard3"></td>
 			<td id="PlayerCard4"></td>
