--- a/Projects/Blackjack-Business Websites V3/games.html
+++ b/Projects/Blackjack-Business Websites V3/games.html
@@ -29,6 +29,21 @@
             	Reevo Games Inc. is a website dedicated to supplying you with the highest quality Digital Games that run smooth on almost any computer build! <br><br> Our team of special programmers are trained with the highest level programming degrees in the highest level languages available for computers in this day and age! <br><br> Reevo Inc was started by our glorious leader and savior Aaron Salcido, whom will one day rise to power and conquor Tamriel.
    </div>
 </aside>
-	
+
+<table>
+	<thead>
+	<tr>
+    	<td>GAMES</td>
+    </tr>
+    </thead>
+    <tbody>
+    	<tr>
+        	<td></td>
+            <td></td>
+			<td></td>
+        </tr>
+    </tbody>   
+</table>
+
 </body>
 </html>
