FIXED HIDING LOGIN BUTTONS!!! Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/login.html
+++ b/Projects/Blackjack-Business Websites V3/login.html
@@ -47,5 +47,8 @@ Logging in/Creating an Account gives you access to features such as The Shopping
 <div>
 	<img src="http://i.imgur.com/XRzaECO.jpg" class="loginImg"/>
 </div>
+<div id="admin">
+	<center><a href="adminlogin.html"/><button>Admin</button></a><center>
+</div>
 </body>
 </html>
