Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/login.html
+++ b/Projects/Blackjack-Business Websites V3/login.html
@@ -35,7 +35,7 @@
 <div class="formdiv">
 	<form name="loginform" action="login.html" method="get" id="loginform">
 				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
-				<input name="password" type="password" /><div id="headerlogin">Password</div>
+				<input name="password" type="password" /><div id="headerlogin">Password</div><br>
 				<input type="submit" text="Submit" value="Submit"/>
 			</form>
 </div>
