--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Register Completed!</title>
 <link type="text/javascript" href="login.js">
+<link type="text/css" rel="stylesheet" href="stylesheet.css">
 <script>
 	function getForm(url){
 		var info=url.split("?");
@@ -25,7 +26,7 @@ function setCookie(cname, cvalue, exdays){
 }
 function getCookie(){
 	var name = cname;
-	var ca = document.cookie.split(;);
+	var ca = document.cookie.split(";");
 	for(var i=0; i<ca.length; i++) {
         var c = ca[i];
         while (c.charAt(0)==' ') c = c.substring(1);
@@ -34,7 +35,7 @@ function getCookie(){
      return "";
 }
 
-}
+
 </script>
 </head>
 
@@ -55,7 +56,7 @@ function getCookie(){
 <div>
 <script>
 //DISPLAY LOG IN INFORMATION TO USER
-document.write();
+
 //	create variable to hold url object ($_GET)
 var url = document.location.href;
 var $_GET = getForm(url);
@@ -63,14 +64,21 @@ var $_GET = getForm(url);
 var str = JSON.stringify($_GET);
 //create a cookiename variable
 var email = $_GET.email.value;
-loginCookie.split("@")
-//create ttl variable
+var ttl = 1;
+var exdays = 1;
+var cnameHolder = $_GET.email.split("@");
+cname = cnameHolder[0]+$_GET["firstname"];
+setCookie(cname, ttl, exdays);
 //pass string and other two variables into setcookie function
+getCookie();
 //getcookie
 //JSON.parse
+JSON.parse($_GET);
 //using a for/in loop, display cookie contents
 
 //call get cookie function
+
+document.write($_GET);
 </script>
 </div>
 </body>
