Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/register.html
+++ b/Projects/Blackjack-Business Websites V3/register.html
@@ -65,7 +65,7 @@
 </script>
 </head>
 
-<body>
+<body id="Register">
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -88,13 +88,13 @@
 </div>
 
 <div class="regesterdiv">
-	<form name="input" action="registercomplete.html" onsubmit="return validate_Form()" method="get" id="loginform">
+	<center><form name="input" action="registercomplete.html" onsubmit="return validate_Form()" method="get" id="loginform">
 				<input name="username" type="text" /><div class="regesterdiv">Enter a Username</div><br>
                 <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br></div>
 				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br>Requires at least one number, One lower case, One Uppercase, special Characters optional(!@#$%^&*+) <br> Between 4-15 Characters Long<br></div><br>
                 <input name="password2" type="password" /><div class="regesterdiv">(Retype)Password</div><br>
-				<input id="registerSubmit" type="submit" value="submit"/><br>
-			</form>
+				<input id="registerSubmit" type="submit" value="Submit"/><br>
+			</form></center>
             
 	            
 </div>
