--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -39,7 +39,7 @@ function getCookie(){
 </script>
 </head>
 
-<body>
+<body id="registerComplete">
 <header>
 		<img src="logo.png" width="134" height="54"/>
     	<ul class="nav">
