Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -71,7 +71,7 @@ cname = cnameHolder[0]+$_GET["firstname"];
 setCookie(cname, ttl, exdays);
 //pass string and other two variables into setcookie function
 getCookie();
-//getcookie
+//getCookie
 //JSON.parse
 JSON.parse($_GET);
 //using a for/in loop, display cookie contents
@@ -79,6 +79,8 @@ JSON.parse($_GET);
 //call get cookie function
 
 document.write($_GET);
+
+
 </script>
 </div>
 </body>
