Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/index.html
+++ b/Projects/Blackjack-Business Websites V3/index.html
@@ -48,6 +48,12 @@
     	Updates!<br>
         
     </p>
+	<p id="updates">
+		(November 17th, 2014) <br>
+		Well everyone the sight is officially up and working! Check out the Products pages for a list of 
+		quality merchandise only found HERE at Reevo Inc, the leader in delivering computer Games and glitchy Websites! Stay tuned for more updates from us!! :D
+	</p>
+	
 </div>
 
 </body>
