Added Shopping Cart scripts and Page, not fully working at the moment Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/games.html
+++ b/Projects/Blackjack-Business Websites V3/games.html
@@ -5,6 +5,8 @@
 <title>Reevo Inc Games</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
+<link type="text/javascript" href="shopping.js">
+<link type="text/javascript" href="shopping.js">
 <script>
 if(loggedIn == false){
 	var blackJackTrial = document.getElementById("bj");
