--- a/Projects/Blackjack-Business Websites V3/index.html
+++ b/Projects/Blackjack-Business Websites V3/index.html
@@ -5,6 +5,7 @@
 <title>Reevo Inc Home</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
+<link type="text/javascript" href="shopping.js">
 
 </head>
 
