--- a/Projects/Blackjack-Business Websites V3/register.html
+++ b/Projects/Blackjack-Business Websites V3/register.html
@@ -5,6 +5,7 @@
 <title>Untitled Document</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
+<link type="text/javascript" href="shopping.js">
 <script>
 //VALIDATE USERNAME!
 	function validate_Username(){
