--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -5,6 +5,7 @@
 <title>Register Completed!</title>
 <link type="text/javascript" href="login.js">
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
+<link type="text/javascript" href="shopping.js">
 <script>
 	function getForm(url){
 		var info=url.split("?");
