--- a/Projects/Blackjack-Business Websites V3/shoppingcart.html
+++ b/Projects/Blackjack-Business Websites V3/shoppingcart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>About Reevo Inc</title>
+<title>Reevo Inc Shopping Cart/title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
@@ -23,8 +23,10 @@
             
 		</ul>
 </header>
-
-<div>
+<script>
+	displayItems();
+</script>
+<div id="shoppingitems">
 
 </div>
 
