--- a/Projects/Blackjack-Business Websites V3/login.html
+++ b/Projects/Blackjack-Business Websites V3/login.html
@@ -5,6 +5,7 @@
 <title>Reevo Inc. Login</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
+<link type="text/javascript" href="shopping.js">
 </head>
 
 <body>
