--- a/Projects/Blackjack-Business Websites V3/games.html
+++ b/Projects/Blackjack-Business Websites V3/games.html
@@ -42,14 +42,23 @@ if(loggedIn == false){
     <tbody>
     	<tr>
         	<td>
-				<center>Connect 4<br><small>Price: <em>$45</em></small><br><img src="connect4.jpg"/></center>
+				<center>Connect 4<br><small>Price: <em>$45</em></small><br>
+				<img src="connect4.jpg"/>
+				<button onClick=addItem(connectFour)>Add Item To Cart</button>
+				</center>
 			</td>
 			<!--BLACKJACK CONTAINER-->
             <td>
-				<center>Blackjack<br><small>Price: <em>$50</em></small><img id="gameimg" src="blackjack.jpg"/></center><br><div id="bj"></div>
+				<center>Blackjack<br><small>Price: <em>$50</em></small>
+				<img id="gameimg" src="blackjack.jpg"/>
+				<button onClick=addItem(blackJack)>Add Item To Cart</button>
+				<br><div id="bj"></div></center>
 			</td>
 			<td>
-				<center>Battleship<br><small>Price: <em>$175</em></small><img src="battleship.jpg" id="gameimg"/></center>
+				<center>Battleship<br><small>Price: <em>$175</em></small>
+				<img src="battleship.jpg" id="gameimg"/>
+				<button onClick=addItem(battleShip)>Add Item To Cart</button>
+				</center>
 			</td>
 			
         </tr>
