Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/games.html
+++ b/Projects/Blackjack-Business Websites V3/games.html
@@ -6,8 +6,8 @@
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
-<link type="text/javascript" href="shopping.js">
 <script>
+checkLogin();
 if(loggedIn == false){
 	var blackJackTrial = document.getElementById("bj");
 	blackJackTrial.innerHTML="<p><center>Only members who are logged in may play the Blackjack Game Trial!</center></p>";
