--- a/Projects/Blackjack-Business Websites V3/shoppingcart.html
+++ b/Projects/Blackjack-Business Websites V3/shoppingcart.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reevo Inc Shopping Cart/title>
+<title>Reevo Inc Games</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
+<link type="text/javascript" href="shopping.js">
+<script>
+if(loggedIn == false){
+	var blackJackTrial = document.getElementById("bj");
+	blackJackTrial.innerHTML="<p><center>Only members who are logged in may play the Blackjack Game Trial!</center></p>";
+}
+</script>
 </head>
-
 <body>
 
 <header>
@@ -23,12 +29,14 @@
             
 		</ul>
 </header>
-<script>
-	displayItems();
-</script>
+
 <div id="shoppingitems">
 
 </div>
-
+<script>
+	displayItems();
+	document.getElementById("shoppingitems").innerHTML=shoppingCart.items[0];
+</script>
 </body>
 </html>
+ 
