Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/games.html
+++ b/Projects/Blackjack-Business Websites V3/games.html
@@ -12,6 +12,12 @@ if(loggedIn == false){
 	var blackJackTrial = document.getElementById("bj");
 	blackJackTrial.innerHTML="<p><center>Only members who are logged in may play the Blackjack Game Trial!</center></p>";
 }
+function setItemCookie(cname, cvalue, exdays){
+	var d = new Date();
+    d.setTime(d.getTime() + (1*24*60*60*1000));
+    var expires = "expires="+d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires;
+}
 </script>
 </head>
 
