--- a/Projects/Blackjack-Business Websites V3/registercomplete.html
+++ b/Projects/Blackjack-Business Websites V3/registercomplete.html
@@ -33,7 +33,7 @@ function getCookie(){
         while (c.charAt(0)==' ') c = c.substring(1);
         if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
     }
-     return "";
+     return ;
 }
 
 
