--- a/Projects/Blackjack-Business Websites V4/register.html
+++ b/Projects/Blackjack-Business Websites V4/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reevo Games Register Here!</title>
+<title>Untitled Document</title>
 <link type="text/css" rel="stylesheet" href="stylesheet.css">
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
@@ -82,7 +82,7 @@
 </header>
 
 <div>
-	<p style="font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size:24px; text-align:center;">
+	<p style="font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size:21px; text-align:center;">
     	Enter information to create an account with Reevo Inc! All of your information is <br>
         secure and we will TOTALLY not send it to anyone...or sell it...maybe...
     </p>
@@ -91,7 +91,7 @@
 <div class="regesterdiv">
 	<center><form name="input" action="registercomplete.html" onsubmit="return validate_Form()" method="get" id="loginform">
 				<input name="username" type="text" /><div class="regesterdiv">Enter a Username</div><br>
-                <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br></div>
+                <input name="email" type="text" /><div class="regesterdiv">Enter a valid email adress <br>(email@host.com)<br><br></div>
 				<input name="password" type="password" /><div class="regesterdiv">Type Your Password<br><small>Requires at least one number, One lower case, One Uppercase, special Characters optional(!@#$%^&*+) <br> Between 4-15 Characters Long<br></small></div><br>
                 <input name="password2" type="password" /><div class="regesterdiv">(Retype)Password</div><br>
 				<input id="registerSubmit" type="submit" value="Submit"/><br>
